--- a/Privacy.html
+++ b/Privacy.html
@@ -15,16 +15,17 @@
         .update-box { background: white; padding: 15px 20px; border-radius: 12px; margin-bottom: 20px; box-shadow: 0 2px 10px rgba(0,0,0,0.05); }
         .update-box strong { color: #1a365d; }
         h2 { color: #1a365d; font-size: 1.4em; margin: 30px 0 15px 0; padding-bottom: 10px; border-bottom: 3px solid #3182ce; }
+        h3 { color: #1a365d; margin: 15px 0 10px 0; }
         p { margin-bottom: 15px; color: #555; }
         .highlight-box { background: linear-gradient(135deg, #e6ffed 0%, #c6f6d5 100%); border-left: 4px solid #38a169; padding: 20px; border-radius: 0 12px 12px 0; margin: 20px 0; }
-        .highlight-box h3 { color: #276749; margin-bottom: 10px; display: flex; align-items: center; gap: 10px; }
+        .highlight-box h3 { color: #276749; margin-bottom: 10px; }
         .highlight-box p { color: #2f855a; margin: 0; }
         ul { padding-left: 20px; margin-bottom: 15px; }
         li { margin-bottom: 10px; color: #555; }
         li strong { color: #1a365d; }
         .section { background: white; padding: 25px; border-radius: 16px; margin-bottom: 20px; box-shadow: 0 2px 10px rgba(0,0,0,0.05); }
         .footer { text-align: center; padding: 30px; color: #666; font-size: 0.9em; }
-        .footer a { color: #3182ce; }
+        a { color: #3182ce; }
     </style>
 </head>
 <body>
@@ -49,15 +50,13 @@
 
         <div class="section">
             <h2>Information We Collect</h2>
-            
-            <h3 style="color: #1a365d; margin: 15px 0 10px 0;">Information You Provide</h3>
+            <h3>Information You Provide</h3>
             <ul>
                 <li><strong>Practice Preferences:</strong> Target airline selection, interview date, and daily goals</li>
                 <li><strong>Practice Data:</strong> Your responses to practice questions, scores, and progress tracking</li>
                 <li><strong>Voice Data:</strong> When using voice practice features, audio is processed locally on your device</li>
             </ul>
-
-            <h3 style="color: #1a365d; margin: 15px 0 10px 0;">Automatically Collected</h3>
+            <h3>Automatically Collected</h3>
             <ul>
                 <li><strong>Usage Data:</strong> App feature usage, session duration, and practice statistics (stored locally only)</li>
                 <li><strong>Device Information:</strong> Device type and OS version for compatibility</li>
@@ -84,16 +83,14 @@
 
         <div class="section">
             <h2>Third-Party Services</h2>
-            
-            <h3 style="color: #1a365d; margin: 15px 0 10px 0;">AI Grading (Claude API)</h3>
+            <h3>AI Grading (Claude API)</h3>
             <p>We use Anthropic's Claude API for AI-powered feedback. Your responses are:</p>
             <ul>
                 <li>Transmitted securely via HTTPS</li>
                 <li>Not stored by Anthropic after processing</li>
                 <li>Used only to generate feedback for your session</li>
             </ul>
-
-            <h3 style="color: #1a365d; margin: 15px 0 10px 0;">Apple Services</h3>
+            <h3>Apple Services</h3>
             <ul>
                 <li><strong>Speech Recognition:</strong> Processed using Apple's on-device speech recognition</li>
                 <li><strong>App Store:</strong> Purchases processed through Apple's App Store</li>
@@ -135,8 +132,8 @@
 
         <div class="section">
             <h2>Contact Us</h2>
-            <p>If you have questions about this Privacy Policy, please open an issue at:<br>
-            <a href="https://github.com/D4vis24/Seat-Lock/issues" style="color: #3182ce;">https://github.com/D4vis24/Seat-Lock/issues</a></p>
+            <p>If you have questions about this Privacy Policy, please contact us at:<br>
+            <a href="mailto:ddavis765@gmail.com">ddavis765@gmail.com</a></p>
         </div>
 
         <div class="footer">
