--- a/Terms.html
+++ b/Terms.html
@@ -15,9 +15,10 @@
         .update-box { background: white; padding: 15px 20px; border-radius: 12px; margin-bottom: 20px; box-shadow: 0 2px 10px rgba(0,0,0,0.05); }
         .update-box strong { color: #1a365d; }
         h2 { color: #1a365d; font-size: 1.4em; margin: 30px 0 15px 0; padding-bottom: 10px; border-bottom: 3px solid #3182ce; }
+        h3 { color: #1a365d; margin: 15px 0 10px 0; }
         p { margin-bottom: 15px; color: #555; }
         .highlight-box { background: linear-gradient(135deg, #ebf8ff 0%, #bee3f8 100%); border-left: 4px solid #3182ce; padding: 20px; border-radius: 0 12px 12px 0; margin: 20px 0; }
-        .highlight-box h3 { color: #2b6cb0; margin-bottom: 10px; display: flex; align-items: center; gap: 10px; }
+        .highlight-box h3 { color: #2b6cb0; margin-bottom: 10px; }
         .highlight-box p { color: #2c5282; margin: 0; }
         ul { padding-left: 20px; margin-bottom: 15px; }
         li { margin-bottom: 10px; color: #555; }
@@ -25,9 +26,11 @@
         .section { background: white; padding: 25px; border-radius: 16px; margin-bottom: 20px; box-shadow: 0 2px 10px rgba(0,0,0,0.05); }
         .warning-box { background: linear-gradient(135deg, #fffaf0 0%, #feebc8 100%); border-left: 4px solid #dd6b20; padding: 20px; border-radius: 0 12px 12px 0; margin: 20px 0; }
         .warning-box h3 { color: #c05621; margin-bottom: 10px; }
-        .warning-box p, .warning-box li { color: #9c4221; }
+        .warning-box ul { margin: 0; }
+        .warning-box li { color: #9c4221; }
         .footer { text-align: center; padding: 30px; color: #666; font-size: 0.9em; }
-        .footer a { color: #3182ce; }
+        a { color: #3182ce; }
+        .legal { text-transform: uppercase; font-size: 0.9em; }
     </style>
 </head>
 <body>
@@ -57,21 +60,18 @@
 
         <div class="section">
             <h2>Purchases and Payments</h2>
-            
-            <h3 style="color: #1a365d; margin: 15px 0 10px 0;">One-Time Purchase</h3>
+            <h3>One-Time Purchase</h3>
             <ul>
                 <li>SeatLock offers a one-time purchase for lifetime access to all features</li>
                 <li>All purchases are processed through Apple's App Store</li>
                 <li>Prices are displayed in your local currency</li>
             </ul>
-
-            <h3 style="color: #1a365d; margin: 15px 0 10px 0;">Refunds</h3>
+            <h3>Refunds</h3>
             <ul>
                 <li>Refund requests must be made through Apple's App Store</li>
                 <li>We do not process refunds directly</li>
             </ul>
-
-            <h3 style="color: #1a365d; margin: 15px 0 10px 0;">Restore Purchases</h3>
+            <h3>Restore Purchases</h3>
             <ul>
                 <li>Restore your purchase on any device using the same Apple ID</li>
                 <li>Use "Restore Purchases" in Settings</li>
@@ -121,7 +121,7 @@
 
         <div class="section">
             <h2>Limitation of Liability</h2>
-            <p style="text-transform: uppercase; font-size: 0.9em;">TO THE MAXIMUM EXTENT PERMITTED BY LAW:</p>
+            <p class="legal">TO THE MAXIMUM EXTENT PERMITTED BY LAW:</p>
             <ul>
                 <li>The App is provided "AS IS" without warranties of any kind</li>
                 <li>We are not liable for any indirect, incidental, special, or consequential damages</li>
@@ -145,8 +145,8 @@
 
         <div class="section">
             <h2>Contact</h2>
-            <p>For questions about these Terms, please open an issue at:<br>
-            <a href="https://github.com/D4vis24/Seat-Lock/issues" style="color: #3182ce;">https://github.com/D4vis24/Seat-Lock/issues</a></p>
+            <p>For questions about these Terms, please contact us at:<br>
+            <a href="mailto:ddavis765@gmail.com">ddavis765@gmail.com</a></p>
         </div>
 
         <div class="footer">
